--- a/assets/style.css
+++ b/assets/style.css
@@ -45,3 +45,16 @@
   50% {clip-path: inset(0)}
   to {clip-path: inset(0 0 0 100%)}
 }
+.text-justify{
+	text-align: justify;
+}
+.cards-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 1rem;
+}
+.cards-wrapper .card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
